# std_monads

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  monad.cppm  std_monads.cppm  unittest.cpp
